Support for angular 2 routing, multiple modules, components and split routes

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,10 @@
-.class {
-	border: solid 1px red;
+@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed|Indie+Flower');
+
+*,
+.h-font-default {
+	font-family: 'Barlow Condensed', sans-serif;
+}
+
+.h-font-writing {
+	font-family: 'Indie Flower', cursive;
 }
