--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,6 +1,9 @@
 <main>
-	<h1>Hello from Angular App with Webpack</h1>
+	<ul>
+		<li><a routerLink="">Home</a></li>
+		<li><a routerLink="about">About</a></li>
+	</ul>
 
-	<img src='/images/angular.png'>
+	<router-outlet></router-outlet>
 
 </main>
